--- a/shop/shop_app/templates/shop_app/goods.html
+++ b/shop/shop_app/templates/shop_app/goods.html
@@ -5,6 +5,7 @@
 {% block content %}
     <div class="product">
         <h3>Product: {{goods}}</h3>
+        <img src="{{ goods.file.url }}" style="max-height: 300px;">
         <p>Description : {{goods.description}}</p>
         <a href="{% url 'shop_app:catalog' %}"><button>Back</button></a>
     </div>
