--- a/shop/shop_app/templates/shop_app/about.html
+++ b/shop/shop_app/templates/shop_app/about.html
@@ -6,11 +6,11 @@
 
     <div class="features">
         <h3>About us</h3>
-        <p>Our site helps you to find the best product for the lowest price(no, we are not the Aliexpres)</p>
+        <p>Our site helps you to find the best product for the lowest price</p>
     </div>
     <div class="contacts">
         <p>call us and we will reply to all your questions</p>
-        <p>+380888888888</p>
+        <p>+123456789101</p>
     </div>
 
 {% endblock content %}
