--- a/shop/shop_app/templates/shop_app/index.html
+++ b/shop/shop_app/templates/shop_app/index.html
@@ -9,7 +9,7 @@
         <h1>Welcome to {{title}}</h1>
         <h3>Look what we have new here</h3>
     </div>
-    <div class="features main_page_style">
+    <div class="main_page_style">
         {% for prod in goods %}
             <p class="main_page_style2">{{ prod }}<br><img src="{{ prod.file.url }}" style="max-height: 200px;"></p>
         {% empty %}
