--- a/shop/users/templates/registration/logged_out.html
+++ b/shop/users/templates/registration/logged_out.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="login_space"></div>
-    <h1 class="features">Logged Out</h1>
+    <h1 class="features" style="margin-left: 19%;">Logged Out</h1>
     <div class="features">
         <a href="{% url 'shop_app:index' %}"><button>Go to main page</button></a>
     </div>
