--- a/shop/shop_app/static/shop_app/css/main.css
+++ b/shop/shop_app/static/shop_app/css/main.css
@@ -1,6 +1,7 @@
 body {
     background: #2c2c2c;
     margin: 0%;
+    align-items: center;
 }
 
 aside {
@@ -8,9 +9,10 @@ aside {
     background: #181818;
     width: 20%;
     padding: 0 2.5%;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     border-right: 5px solid #4d4d4d;
+    position: fixed;
 }
 
 .eshop_margin{
@@ -68,15 +70,19 @@ main .features {
     text-align: center;
     color: #fff;
     margin-top: 0%;
+    margin-left: 10%;
 }
 main .features h1 {
     margin-top: 0%;
     padding-top: 40px;
+    margin-left: 10%;
 }
 
 main .features h3 {
     margin-top: 0%;
     padding-top: 20px;
+    margin-left: 10%;
+
 }
 
 main .contacts {
@@ -87,11 +93,26 @@ main .contacts {
 
 main .features a {
     color: #fff;
+    margin-left: 10%;
+}
+
+main .features p {
+    color: #fff;
+    margin-left: 10%;
+}
+
+main .features form {
+    color: #fff;
+    margin-left: 10%;
 }
 
 main .main_page_style {
+    text-align: center;
+    color: #fff;
+    margin-top: 0%;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 10%;
 }
 
 main .main_page_style2 {
@@ -100,6 +121,7 @@ main .main_page_style2 {
 
 main .product {
     color: #fff;
+    margin-left: 26%;
 }
 
 main .product h3 {
@@ -115,8 +137,13 @@ main .login_space {
 main .register {
     color: #fff;
     margin-top: 0%;
+    margin-left: 26%;
 }
 
 main .register ul {
     list-style:none ;
+}
+
+main .new_item {
+    margin-left: 26%;
 }
