--- a/shop/shop_app/templates/shop_app/catalog.html
+++ b/shop/shop_app/templates/shop_app/catalog.html
@@ -5,9 +5,10 @@
 {% block content %}
 
     <div class="features">
-        <h3>List of all our products</h3>
+        <h1>All products</h1>
         {% for prod in goods %}
-                <a href="{% url 'shop_app:goods' prod.id %}">{{ prod }}</a></br></br>
+                <a href="{% url 'shop_app:goods' prod.id %}">{{ prod }}</a><br>
+                <img src="{{ prod.file.url }}" style="max-height: 100px; margin-left: 10%;"><br><br><br>
         {% empty %}
             <p>No products added yet :(</p>
         {% endfor %}
