--- a/shop/users/templates/registration/login.html
+++ b/shop/users/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="login_space"></div>
-    <h1 class="features">Log in</h1>
+    <h1 class="features" style="margin-left: 20%;">Log in</h1>
     {% if form.errors %}
         <p class="features">Your username and password didn't match. Please try again.</p>
     {% endif %}
@@ -19,7 +19,7 @@
             <label for="id_password">Password:</label>
             <input type="password" name="password" autocomplete="current-password" required="" id="id_password">
         </p>
-        <button name="submit">Log in</button>
+        <button name="submit" style="margin-left: 10%;">Log in</button>
         <input type="hidden" name="next" value="{% url 'shop_app:index' %}" />
     </form>
 
