--- a/shop_app/templates/shop_app/new_goods.html
+++ b/shop_app/templates/shop_app/new_goods.html
@@ -5,20 +5,10 @@
 {% block content %}
     <div class="features">
         <h3 style="margin-left: 19%;">Add new product</h3>
-            <form action="/new_goods/" method="post" ,="" enctype="multipart/form-data">
+            <form action="{% url 'shop_app:new_goods' %}" method="post">
                 {% csrf_token %}
-                <input type="hidden" name="csrfmiddlewaretoken" value="cSP9a6pocdBPt7M0J957CO18oW7V8niArG50OFZgMtZCMDca9wLpBUqcKg2CtZXu">
-                <p>Name: 
-        <input type="text" name="name" maxlength="50" required="" id="id_name">
-      </p>
-      <p>Description<br>
-        <textarea name="description" cols="40" rows="10" maxlength="200" required="" id="id_description"></textarea>
-      </p>
-      <p>
-        <label for="id_file">File:</label>
-        <input type="file" name="file" accept="image/*" required="" id="id_file">
-      </p>
-      <button name="submit" style="margin-left: 9%;">Add product</button>
+                {{form.as_p}}
+                <button name="submit" style="margin-left: 9%;">Add product</button>
             </form>
     </div>
     
