--- a/shop_app/templates/shop_app/index.html
+++ b/shop_app/templates/shop_app/index.html
@@ -13,7 +13,7 @@
         {% for prod in goods %}
             <p class="main_page_style2">{{ prod }}<br><img src="{{ prod.file.url }}" style="max-height: 200px;"></p>
         {% empty %}
-            <p class="features">No products added yet :(</p>
+            <p style="margin-left: 48%;">No products added yet :(</p>
         {% endfor %}
     </div>
 
